wrap has been fixed

--- a/styles/header.css
+++ b/styles/header.css
@@ -71,6 +71,7 @@ header {
     width: 100%;
     flex-direction: row;
     justify-content: flex-end;
+	 flex-wrap: nowrap;
   }
 
   .header-menu {
